docs📝: 添加一下jvm的笔记